@@ -161,10 +161,10 @@ g_iKeyMap [] = {
   /* 109 */	0,		0,		0,
   /* 110 */	0,		0,		0,
   /* 111 */	VK_DIVIDE,	0,		KEY_KP_Divide,
-  /* 112 */	VK_KANA,	KEY_HKTG,	0,
+  /* 112 */	0,		0,		0,
   /* 113 */	0,		0,		0,
   /* 114 */	0,		0,		0,
-  /* 115 */	0,		KEY_BSlash2,	0,
+  /* 115 */	0,		0,		0,
   /* 116 */	0,		0,		0,
   /* 117 */	0,		0,		0,
   /* 118 */	0,		0,		0,
